--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -129,7 +129,7 @@
     <h3>
       Introduction to parsing, language tokens, regular expressions, markup languages, reverse engineer the rich-text file format.
       <br>
-      Homework: nested-structures in the real world
+      Homework: The Human Computer
       <br>
       Reading: None
     </h3>
@@ -138,7 +138,7 @@
     <h3>
       More HTML, element attributes, nested containers, linking between HTML files, images, narrative structures.
       <br>
-      Homework: HTML story
+      Homework: HTML Story
       <br>
       Reading: None
     </h3>
@@ -147,7 +147,7 @@
     <h3>
       Introduction to CSS, selectors, style, fonts, color, simple alignment.
       <br>
-      Homework: style the html story
+      Homework: HTML Story with Style 
       <br>
       Reading: <a href="http://worrydream.com/ABriefRantOnTheFutureOfInteractionDesign/" style="color: black; text-decoration: none;">A Brief Rant on the Future of Interaction Design</a>
     </h3>
@@ -156,7 +156,7 @@
     <h3>
       Box model, divs, advanced alignment, absolute and relative positioning, flexbox.
       <br>
-      Homework: full-screen painting with divs
+      Homework: Full-Screen Painting with Divs
       <br>
       Reading: <a href="http://www.papert.org/articles/GearsOfMyChildhood.html" style="color: black; text-decoration: none;">The Gears of My Childhood</a>
     </h3>
@@ -174,7 +174,7 @@
     <h3>
       Introduction to Javascript day 1: storing memory, recalling memory, simple variable types, the Javascript console, arithmetic.
       <br>
-      Homework: strange Javascript arithmetic
+      Homework: Strange Javascript arithmetic
       <br>
       Reading: <a href="https://www.freecodecamp.org/news/a-brief-history-of-random-numbers-9498737f5b6c/" style="color: black; text-decoration: none;">A Brief History of Random Numbers</a>
     </h3>
@@ -192,7 +192,7 @@
     <h3>
       Javascript and the DOM. W3C DOM level 1 methods, createElement, setAttribute, querySelector, querySelectorAll.
       <br>
-      Homework: random color palette
+      Homework: Random Color Palette
       <br>
       Reading: None
     </h3>
@@ -201,7 +201,7 @@
     <h3>
       Complex Javascript data types, arrays, objects.
       <br>
-      Homework: simple generative poetry
+      Homework: Simple Generative Poetry
       <br>
       Reading: <a href="http://www.vasulka.org/archive/4-20a/Articulated(6013).pdf" style="color: black; text-decoration: none;">Articulated Light</a>
     </h3>
@@ -210,7 +210,7 @@
     <h3>
       Advanced control flow, functions. Interfacing with JSON and raw text, revisit file formats and best practices when creating data.
       <br>
-      Homework: Markov generated poetry
+      Homework: Markov Generated Poetry
       <br>
       Reading: None
     </h3>
@@ -242,7 +242,7 @@
     <h3>
       HTML5 Fetch, capturing data from the web, build an API, processing and visualizing data.
       <br>
-      Homework: personal homepage
+      Homework: Personal Homepage
       <br>
       Reading: None
     </h3>
