--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -120,7 +120,7 @@
     <h3>
       Github and introduction to terminal, file types, character encoding, ASCII and Unicode, hex editors. Introduction to HTML, elements.
       <br>
-      Homework: none
+      Homework: None
       <br>
       Reading: <a href="https://www.atariarchives.org/artist/sec5.php" style="color: black; text-decoration: none;">Computer Grass is Natural Grass</a>
     </h3>
@@ -183,7 +183,7 @@
     <h3>
       Introduction to Javascript day 2: control flow, conditionals, loops.
       <br>
-      Homework: none
+      Homework: None
       <br>
       Reading: <a href="http://www.servinglibrary.org/journal/3/a-million-random-digits" style="color: black; text-decoration: none;">A Million Random Digits</a>
     </h3>
@@ -228,7 +228,7 @@
     <h3>
       Drawing with canvas and SVG. Using CSS and DOM level 1 with SVG.
       <br>
-      Homework: none
+      Homework: None
       <br>
       Reading: None
     </h3>
