--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -116,7 +116,7 @@
     <h3>In the final few weeks students are introduced to non-linear event-based programming, including user-input interaction and asynchronous retrieval of information from the web.</h3>
 
     <h1>SCHEDULE IN DETAIL</h1>
-    <h2>August 27</h2>
+    <h2>Week #1 - August 27</h2>
     <h3>
       Github and introduction to terminal, file types, character encoding, ASCII and Unicode, hex editors. Introduction to HTML, elements.
       <br>
@@ -125,7 +125,7 @@
       Reading: <a href="https://www.atariarchives.org/artist/sec5.php" style="color: black; text-decoration: none;">Computer Grass is Natural Grass</a>
     </h3>
 
-    <h2>September 3</h2>
+    <h2>Week #2 - September 3</h2>
     <h3>
       Introduction to parsing, language tokens, regular expressions, markup languages, reverse engineer the rich-text file format.
       <br>
@@ -134,7 +134,7 @@
       Reading: None
     </h3>
 
-    <h2>September 10</h2>
+    <h2>Week #3 - September 10</h2>
     <h3>
       More HTML, element attributes, nested containers, linking between HTML files, images, narrative structures.
       <br>
@@ -143,7 +143,7 @@
       Reading: None
     </h3>
 
-    <h2>September 17</h2>
+    <h2>Week #4 - September 17</h2>
     <h3>
       Introduction to CSS, selectors, style, fonts, color, simple alignment.
       <br>
@@ -152,7 +152,7 @@
       Reading: <a href="http://worrydream.com/ABriefRantOnTheFutureOfInteractionDesign/" style="color: black; text-decoration: none;">A Brief Rant on the Future of Interaction Design</a>
     </h3>
 
-    <h2>September 24</h2>
+    <h2>Week #5 - September 24</h2>
     <h3>
       Box model, divs, advanced alignment, absolute and relative positioning, flexbox.
       <br>
@@ -161,7 +161,7 @@
       Reading: <a href="http://www.papert.org/articles/GearsOfMyChildhood.html" style="color: black; text-decoration: none;">The Gears of My Childhood</a>
     </h3>
 
-    <h2>October 1</h2>
+    <h2>Week #6 - October 1</h2>
     <h3>
       CSS animations, CSS pseudo-classes.
       <br>
@@ -170,7 +170,7 @@
       Reading: None
     </h3>
 
-    <h2>October 8</h2>
+    <h2>Week #7 - October 8</h2>
     <h3>
       Introduction to Javascript day 1: storing memory, recalling memory, simple variable types, the Javascript console, arithmetic.
       <br>
@@ -179,7 +179,7 @@
       Reading: <a href="https://www.freecodecamp.org/news/a-brief-history-of-random-numbers-9498737f5b6c/" style="color: black; text-decoration: none;">A Brief History of Random Numbers</a>
     </h3>
 
-    <h2>October 15</h2>
+    <h2>Week #8 - October 15</h2>
     <h3>
       Introduction to Javascript day 2: control flow, conditionals, loops.
       <br>
@@ -188,7 +188,7 @@
       Reading: <a href="http://www.servinglibrary.org/journal/3/a-million-random-digits" style="color: black; text-decoration: none;">A Million Random Digits</a>
     </h3>
 
-    <h2>October 22</h2>
+    <h2>Week #9 - October 22</h2>
     <h3>
       Javascript and the DOM. W3C DOM level 1 methods, createElement, setAttribute, querySelector, querySelectorAll.
       <br>
@@ -197,7 +197,7 @@
       Reading: None
     </h3>
 
-    <h2>October 29</h2>
+    <h2>Week #10 - October 29</h2>
     <h3>
       Complex Javascript data types, arrays, objects.
       <br>
@@ -206,7 +206,7 @@
       Reading: <a href="http://www.vasulka.org/archive/4-20a/Articulated(6013).pdf" style="color: black; text-decoration: none;">Articulated Light</a>
     </h3>
 
-    <h2>November 5</h2>
+    <h2>Week #11 - November 5</h2>
     <h3>
       Advanced control flow, functions. Interfacing with JSON and raw text, revisit file formats and best practices when creating data.
       <br>
@@ -215,7 +215,7 @@
       Reading: None
     </h3>
 
-    <h2>November 12</h2>
+    <h2>Week #12 - November 12</h2>
     <h3>
       User input, keyboard and mouse, asynchronous operations, event handlers, function arguments.
       <br>
@@ -224,7 +224,7 @@
       Reading: <a href="http://www.i-n-t-e-r-f-a-c-e.org/MEDIA/PDF/Designing-Interactions.pdf" style="color: black; text-decoration: none;">Futures and Alternative Nows</a>
     </h3>
 
-    <h2>November 19</h2>
+    <h2>Week #13 - November 19</h2>
     <h3>
       Drawing with canvas and SVG. Using CSS and DOM level 1 with SVG.
       <br>
@@ -238,7 +238,7 @@
       Thanksgiving break - no class
     </h3>
 
-    <h2>December 3</h2>
+    <h2>Week #14 - December 3</h2>
     <h3>
       HTML5 Fetch, capturing data from the web, build an API, processing and visualizing data.
       <br>
@@ -247,7 +247,7 @@
       Reading: None
     </h3>
 
-    <h2>December 10</h2>
+    <h2>Week #15 - December 10</h2>
     <h3>
       Share homepage projects and wrap up term.
     </h3>
