--- a/homework/index.html
+++ b/homework/index.html
@@ -40,6 +40,16 @@
   <body>
     <div id="links">
       <a href="week2/index.html">Week 2</a>
+      <a href="week3/index.html">Week 2</a>
+      <a href="week4/index.html">Week 2</a>
+      <a href="week5/index.html">Week 2</a>
+      <a href="week6/index.html">Week 2</a>
+      <a href="week7/index.html">Week 2</a>
+      <a href="week9/index.html">Week 2</a>
+      <a href="week10/index.html">Week 2</a>
+      <a href="week11/index.html">Week 2</a>
+      <a href="week12/index.html">Week 2</a>
+      <a href="week14/index.html">Week 2</a>
     </div>
   </body>
 
