--- a/readings/index.html
+++ b/readings/index.html
@@ -39,13 +39,13 @@
 
   <body>
     <div id="links">
-      <a href="https://www.atariarchives.org/artist/sec5.php">Week 1</a>
-      <a href="http://worrydream.com/ABriefRantOnTheFutureOfInteractionDesign/">Week 4</a>
-      <a href="http://www.papert.org/articles/GearsOfMyChildhood.html">Week 5</a>
-      <a href="https://www.freecodecamp.org/news/a-brief-history-of-random-numbers-9498737f5b6c/">Week 7</a>
-      <a href="http://www.servinglibrary.org/journal/3/a-million-random-digits">Week 8</a>
-      <a href="http://www.vasulka.org/archive/4-20a/Articulated(6013).pdf">Week 10</a>
-      <a href="http://www.i-n-t-e-r-f-a-c-e.org/MEDIA/PDF/Designing-Interactions.pdf">Week 12</a>
+      <a href="https://www.atariarchives.org/artist/sec5.php">Week&nbsp;1</a>
+      <a href="http://worrydream.com/ABriefRantOnTheFutureOfInteractionDesign/">Week&nbsp;4</a>
+      <a href="http://www.papert.org/articles/GearsOfMyChildhood.html">Week&nbsp;5</a>
+      <a href="https://www.freecodecamp.org/news/a-brief-history-of-random-numbers-9498737f5b6c/">Week&nbsp;7</a>
+      <a href="http://www.servinglibrary.org/journal/3/a-million-random-digits">Week&nbsp;8</a>
+      <a href="http://www.vasulka.org/archive/4-20a/Articulated(6013).pdf">Week&nbsp;10</a>
+      <a href="http://www.i-n-t-e-r-f-a-c-e.org/MEDIA/PDF/Designing-Interactions.pdf">Week&nbsp;12</a>
     </div>
   </body>
 
