--- a/homework/week3/index.html
+++ b/homework/week3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<title>Homework #1</title>
+<title>Homework #2</title>
 
 <body>
 
@@ -9,39 +9,39 @@
 
 <br>
 
-<h2>Homework #1 - The Human Computer</h2>
-<p>Create a webpage using HTML that contains a list of instructions meant to be executed by a human. Your instructions don't have to be for anything abstract (although I encourage you to be creative) - it can be as simple as "how to make a PB&J sandwich".</p>
+<h2>Homework #2 - HTML Story</h2>
+<p>Create a webpage using HTML that tells a story or describes a process.</p>
 
 <br>
 
 <h2>Requirements</h2>
 <ul>
-  <li>Your code must at least contain the &lthtml&gt, &lthead&gt, &lttitle&gt, and &ltbody&gt tags.</li>
-  <li>Your code must use the &ltol&gt and &ltli&gt tags to create an ordered list of at least 3 steps in your instructions.</li>
+  <li>Your code must have at least 3 distinct pages.</li>
+  <li>Your code must use the &lta&gt tag at least once on each page to link to the next page (or back to the beginning).</li>
+  <li>Your code must use the style attribute at least once on each page to position an element.</li>
 </ul>
 
 <br>
 
 <h2>References</h2>
 <ul>
-  <li><a href="https://www.philamuseum.org/collections/permanent/138592.html?mulR=41286724%7C1">Marcel Duchamp - Unhappy Readymade</a></li>
-  <li><a href="https://www.nga.gov/collection/art-object-page.118039.html">Sol LeWitt - Wall Drawing #65</a></li>
-  <li><a href="https://web.archive.org/web/20070927222153/http://www.e-flux.com/projects/do_it/manuals/artists/n/N001/N001A_text.html#">Bruce Nauman - Body Pressure</a></li>
-  <li><a href="https://en.wikipedia.org/wiki/Voice_Piece_for_Soprano">Yoko Ono - Voice Piece for Soprano</a></li>
+  <li>Maeda @ Media - John Maeda</li>
+  <li>Design By Numbers - John Maeda</li>
+  <li><a href="https://codepen.io/learn43/pen/pgYKwQ">Choose Your Own Adventure</a></li>
 </ul>
 
 <br>
 
 <h2>Submission</h2>
-<p>You will submit your homework by uploading your HTML file to canvas.</p>
+<p>You will submit your homework by uploading a zip file of all of the html files and any assets used by your page to canvas.</p>
 
 <br>
 
 <h2>Things To Think About</h2>
 <ul>
-  <li>How can you be sure your instructions will be understood as you intended them to be?</li>
-  <li>What is the trade off between specificity and expression?</li>
-  <li>What is the relationship between the "instructor" and the "performer"?</li>
+  <li>How can you take advantage of the text placement to enhance the experience?</li>
+  <li>How will your page look on different devices? Or in a browser with different dimensions?</li>
+  <li>Is there a way to make the experience of moving between pages more meaningful?</li>
 </ul>
 
 </body>
